--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,8 @@
 deap == 1.3.1
 matplotlib == 3.2.2
 networkx == 2.4
-nose == 1.3.7
 numpy == 1.19.0
 pygraphviz == 1.5
-pymop == 0.2.4
-scoop == 0.7.1.1
-setuptools == 45.2.0
+qdpy == 0.1.2.1
+scipy == 1.5.1
+utils == 1.0.1
